/*
 * $Id: ChangeLog,v 1.2487 2004/03/04 21:49:44 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-05 04:55 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/hbffind.c
    ! minor fix to be more Clipper compatible when Directory( "C:", "V" )

  * source/rtl/direct.c
    ! make sure label attribute is stripped-out in second loop when argument
      "V" is passed during Directory() operation.
    % more optimization on regex compiling by using proprietary static function

2004-03-05 10:57 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/mysql/mysql.c
    ! HB_FUNC(SQLFETCHR) fix to use hb_itemPutCL() not hb_itemPutC()
        ( previously truncated data containing embedded CHR(0) i.e. binary data )
    - HB_FUNC(DATATOSQL) & HB_FUNC(FILETOSQLBINARY) optimised, added error checking
                and option to use mysql_real_escape_string() by passing second
                parameter ( (MYSQL *) )

2004-03-04 15:09 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/vm/hbini.prg
    ! Fixed problems when write an INI file.

2004-03-04 20:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zip.c
    ! minor fix in creating array of files when skleton is not passed during
      unzip operation.

2004-03-04 01:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    ! Fixed possibility of double freeing of base array when calling hb_clsFinalize()

2004-03-04 04:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/direct.c
    * ['] -> ["]

2004-03-04 00:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/direct.c
    ! Removed 2 GPF traps.

2004-03-03 22:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/Whoo/source/controls.prg
    ! Optimized DO CASE of Window Procedure to SWITCH
